# mt-translator

./: .gitignore  CMakeLists.txt  COPYING  config.h.cmake-in  configure.ac
src/: .gitignore  CMakeLists.txt  Makefile.am  event_dispatcher.h  input_utils.c  input_utils.h  mt-translator.c  mt-translator.h  pipe_event_dispatcher.c  pipe_event_dispatcher.h  uinput_event_dispatcher.c  uinput_event_dispatcher.h
